# rayTracer

./: .gitmodules  CMakeLists.txt  configure.sh  image.ppm
app/: CMakeLists.txt  Visualizer.h
app/src/: Visualizer.cpp  main.cpp
renderer/: CMakeLists.txt
renderer/Features/Algorithms/: simpleMath.cpp
renderer/core/: CMakeLists.txt  Color.h
renderer/core/src/: Color.cpp
renderer/math/: CMakeLists.txt  Matrix.h  Transformation.h  comparisonTests.h  simpleMath.h  tuples.h
renderer/math/src/: Matrix.cpp  simpleMath.cpp
renderer/objects/: CMakeLists.txt  Canvas.h  Environment.h  Projectiles.h  Ray.h  Sphere.h
renderer/objects/Environment/: CMakeLists.txt  Environment.cpp  Environment.h
renderer/objects/Projectiles/: CMakeLists.txt  Projectiles.cpp  Projectiles.h
renderer/objects/src/: Canvas.cpp  Environment.cpp  Projectiles.cpp  Ray.cpp  Sphere.cpp
renderer/tests/: CMakeLists.txt  TestSuite.cpp  TestSuite.h
renderer/tests/Comparison/: CMakeLists.txt  comparisonTests.h
src/: CMakeLists.txt  main.cpp
src/Features/: CMakeLists.txt
src/Features/Algorithms/: CMakeLists.txt  simpleMath.h
src/Features/Tuples/: CMakeLists.txt  tuples.h
src/objects/: CMakeLists.txt
src/objects/Canvas/: CMakeLists.txt  Canvas.cpp  Canvas.h
src/objects/Colors/: CMakeLists.txt
src/objects/Environment/: CMakeLists.txt
src/objects/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h
src/objects/Projectiles/: CMakeLists.txt
src/objects/Ray/: CMakeLists.txt  Ray.cpp  Ray.h
src/objects/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.h
src/tests/: CMakeLists.txt  TestSuite.cpp  TestSuite.h
src/tests/Comparison/: CMakeLists.txt  comparisonTests.h
